<resources>
    <string name="app_name">Prediction Of Divorce.</string>
    <string name="choiceLevel_0">Never</string>
    <string name="choiceLevel_1">Hardly</string>
    <string name="choiceLevel_2">Rarely</string>
    <string name="choiceLevel_3">Often</string>
    <string name="choiceLevel_4">Always</string>
    <string name="item_1">\u0020\u0020\u0020\u0020If one of us apologizes when our discussion deteriorates, the discussion ends.</string>
    <string name="item_2">\u0020\u0020\u0020\u0020I know we can ignore our differences, even if things get hard sometimes.</string>
    <string name="item_3">\u0020\u0020\u0020\u0020We can discuss our relationship from the beginning and correct our mistakes.</string>
    <string name="item_4">\u0020\u0020\u0020\u0020The time I spent with my husband/wife is special for us.</string>
    <string name="item_5">\u0020\u0020\u0020\u0020We don\'t have time at home as partners.</string>
    <string name="item_6">\u0020\u0020\u0020\u0020We are like two strangers who share the same environment at home rather than family.</string>
    <string name="item_7">\u0020\u0020\u0020\u0020I enjoy my holidays with my husband/wife.</string>
    <string name="item_8">\u0020\u0020\u0020\u0020I enjoy traveling with my husband/wife.</string>
    <string name="item_9">\u0020\u0020\u0020\u0020I think that one day in the future when I look back, I see that my spouse and I have been in harmony with each other.</string>
    <string name="item_10">\u0020\u0020\u0020\u0020My spouse and I have similar values in terms of personal freedom</string>
    <string name="item_11">\u0020\u0020\u0020\u0020My spouse and I have a similar sense of entertainment.</string>
    <string name="item_12">\u0020\u0020\u0020\u0020Our dreams with my spouse are similar and harmonious.</string>
    <string name="item_13">\u0020\u0020\u0020\u0020We\'re compatible with my spouse about what love should be.</string>
    <string name="item_14">\u0020\u0020\u0020\u0020We share the same views about being happy in our life with my spouse.</string>
    <string name="item_15">\u0020\u0020\u0020\u0020My spouse and I have similar ideas about how marriage should be.</string>
    <string name="item_16">\u0020\u0020\u0020\u0020My spouse and I have similar ideas about how roles should be in marriage.</string>
    <string name="item_17">\u0020\u0020\u0020\u0020My spouse and I trust each other. </string>
    <string name="item_18">\u0020\u0020\u0020\u0020I know exactly what my husband/wife likes.</string>
    <string name="item_19">\u0020\u0020\u0020\u0020I know how my spouse wants to be taken care of when she/he is sick.</string>
    <string name="item_20">\u0020\u0020\u0020\u0020I know my spouse\'s favorite food.</string>
    <string name="item_21">\u0020\u0020\u0020\u0020I can tell you what kind of stress my spouse is facing in her/his life.</string>
    <string name="item_22">\u0020\u0020\u0020\u0020I have knowledge of my spouse\'s inner world.</string>
    <string name="item_23">\u0020\u0020\u0020\u0020I know my spouse\'s basic anxieties.</string>
    <string name="item_24">\u0020\u0020\u0020\u0020I know what my spouse\'s current sources of stress are.</string>
    <string name="item_25">\u0020\u0020\u0020\u0020I know my spouse\'s hopes and wishes.</string>
    <string name="item_26">\u0020\u0020\u0020\u0020I know my spouse very well.</string>
    <string name="item_27">\u0020\u0020\u0020\u0020I know my spouse\'s friends and their social relationships.</string>
    <string name="item_28">\u0020\u0020\u0020\u0020I feel aggressive when I argue with my spouse.</string>
    <string name="item_29">\u0020\u0020\u0020\u0020When discussing with my spouse, I usually use expressions such as \‘you always\’ or \‘you never\’.</string>
    <string name="item_30">\u0020\u0020\u0020\u0020I can use negative statements about my spouse\'s personality during our discussions.</string>
    <string name="item_31">\u0020\u0020\u0020\u0020I can use offensive expressions during our discussions.</string>
    <string name="item_32">\u0020\u0020\u0020\u0020I can insult my spouse during our discussions.</string>
    <string name="item_33">\u0020\u0020\u0020\u0020I can be humiliating when we discuss.</string>
    <string name="item_34">\u0020\u0020\u0020\u0020My discussion with my spouse is not calm.</string>
    <string name="item_35">\u0020\u0020\u0020\u0020I hate my spouse\'s way of opening a subject of discussion.</string>
    <string name="item_36">\u0020\u0020\u0020\u0020When I talk to my spouse about something, my calm suddenly breaks.</string>
    <string name="item_37">\u0020\u0020\u0020\u0020When I argue with my spouse, ı only go out and I don\'t say a word.</string>
    <string name="item_38">\u0020\u0020\u0020\u0020I mostly stay silent to calm the situation a little bit.</string>
    <string name="item_39">\u0020\u0020\u0020\u0020Sometimes I think it\'s good for me to leave home for a while.</string>
    <string name="item_40">\u0020\u0020\u0020\u0020I\'d rather stay silent than discuss it with my spouse.</string>
    <string name="item_41">\u0020\u0020\u0020\u0020When I discuss with my spouse, I stay silent because I am afraid of not being able to control my anger.</string>
    <string name="item_42">\u0020\u0020\u0020\u0020I feel right in our discussions.</string>
    <string name="item_43">\u0020\u0020\u0020\u0020I have nothing to do with what I\'ve been accused of.</string>
    <string name="item_44">\u0020\u0020\u0020\u0020I\'m not actually the one who\'s guilty about what I\'m accused of.</string>
    <string name="item_45">\u0020\u0020\u0020\u0020I\'m not the one who\'s wrong about problems at home.</string>
    <string name="item_46">\u0020\u0020\u0020\u0020I\'m not afraid to tell my spouse about her/his incompetence.</string>
</resources>
