<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc9bb3">
<!--dfadf-->
    <TextView
        android:id="@+id/item17_Question"
        android:layout_width="363dp"
        android:layout_height="182dp"
        android:layout_marginTop="124dp"
        android:background="#ffffff"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/item_17"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item17_Title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Question 17"
        android:textColor="#ffe4e1"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/item17_Question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/item17_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="36dp"
        android:text="NEXT"
        android:background="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/item17_checkBox_level0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/choiceLevel_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item17_Question"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/item17_checkBox_level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/choiceLevel_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/item17_checkBox_level0"
        app:layout_constraintTop_toBottomOf="@+id/item17_Question"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/item17_checkBox_level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/choiceLevel_2"
        app:layout_constraintEnd_toStartOf="@+id/item17_checkBox_level3"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item17_checkBox_level0"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/item17_checkBox_level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/choiceLevel_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item17_checkBox_level1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/item17_checkBox_level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/choiceLevel_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item17_checkBox_level2"
        android:onClick="onCheckboxClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>